# veritas

./: .gitignore  CITATION.cff  LICENSE  README.md  SECURITY.md  atlas  publication.md  vt
atlas_api/atlas_api_app/: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-lock.txt
atlas_api/atlas_api_app/alembic/: env.py
atlas_api/atlas_api_app/alembic/versions/: 001_initial_schema.py  002_audit_and_staging_ops.py  003_dataset_secondary_storage.py
atlas_api/atlas_api_app/app/: bootstrap.py  celery_app.py  cli.py  main.py
atlas_api/atlas_api_app/app/core/: config.py  enums.py  logging_config.py
atlas_api/atlas_api_app/app/db/: session.py
atlas_api/atlas_api_app/app/integrations/: object_storage.py  pennsieve.py
atlas_api/atlas_api_app/app/middleware/: __init__.py  access_log.py  admin_rate_limit.py  request_id.py
atlas_api/atlas_api_app/app/models/: __init__.py  audit_event.py  dataset.py  dataset_grant.py  staging_session.py
atlas_api/atlas_api_app/app/security/: auth.py  deps.py  models.py  policy.py
atlas_api/atlas_api_app/app/services/: audit.py  dataset_access.py  seed.py  staging_authorization.py  staging_transfer.py  veritas_payloads.py
atlas_api/atlas_api_app/docker/initdb/: 01-atlas-test.sql
atlas_api/atlas_api_app/docs/: operations.md
atlas_api/atlas_api_app/scripts/: generate_dev_token.py
atlas_api/atlas_api_app/tests/: conftest.py
veritas/veritas_full_repo/backend/: .env.example  .env.production.example  .env.staging.example  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  env.local.sqlite.example  pyproject.toml  requirements.txt
(+262 files in other folders)
